force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/Itens_para_Demonstra_o_Treinamento__c.object-meta.xml
<CustomObject>
    <label>Itens para Demonstração / Treinamento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Numeração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens para Demonstração / Treinamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>