force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/fields/Acess_rios_Necess_rios__c.field-meta.xml
<CustomField>
    <fullName>Acess_rios_Necess_rios__c</fullName>
    <label>Acessórios Necessários</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>