force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/fields/C_digo_de_F_brica__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_F_brica__c</fullName>
    <formula>Produto_para_Demonstra_o__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Fábrica</label>
    <type>Text</type>
</CustomField>