force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/fields/Controle__c.field-meta.xml
<CustomField>
    <fullName>Controle__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>