force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/fields/Descri_o_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_do_Produto__c</fullName>
    <formula>Produto_para_Demonstra_o__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição do Produto</label>
    <type>Text</type>
</CustomField>