force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/fields/Marca1__c.field-meta.xml
<CustomField>
    <fullName>Marca1__c</fullName>
    <formula>TEXT(Ativo_Relacionado__r.Marca__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>