force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/fields/Modelo1__c.field-meta.xml
<CustomField>
    <fullName>Modelo1__c</fullName>
    <formula>Ativo_Relacionado__r.Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo</label>
    <type>Text</type>
</CustomField>