force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/fields/Produto_para_Demonstra_o__c.field-meta.xml
<CustomField>
    <fullName>Produto_para_Demonstra_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto para Demonstração</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Testes</relationshipName>
    <type>Lookup</type>
</CustomField>