force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/recordTypes/Demonstra_o_de_Produto.recordType-meta.xml
<RecordType>
    <fullName>Demonstra_o_de_Produto</fullName>
    <active>true</active>
    <description>Registros destinado a serviços de demonstração de produtos</description>
    <label>Demonstração de Produto</label>
</RecordType>