force-app/main/default/objects/Itens_para_Demonstra_o_Treinamento__c/recordTypes/Treinamento_de_Ativos.recordType-meta.xml
<RecordType>
    <fullName>Treinamento_de_Ativos</fullName>
    <active>true</active>
    <description>Registro destinado a treinamento de equipe sobre um determinado ativo</description>
    <label>Treinamento de Ativos</label>
</RecordType>